# tasks-emfi

test01-cli/: Cargo.toml  task.md
test01-cli/src/: main.rs  test.txt
test02-restapi/: Cargo.toml  task.md
test02-restapi/src/: main.rs  structs.rs
test02-restapi/src/websocket/: mod.rs  router.rs  ws_session.rs
test03-matrix/: Cargo.toml  task.md
test03-matrix/src/: main.rs
