[package]
name = "test02-restapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.0"
actix-web-actors = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
env_logger = "0.10.0"